src/styles/index.css
*{
  margin: 0;
  padding: 0;
}

body{
  width: calc(100vw-1px);
}

h2{
  font-family: 'Anton', sans-serif;
  font-size: 1.5em;
  letter-spacing: 3px;
  font-weight: 100;
  text-align: center;
}
h3, p{
  font-family: 'News Cycle', sans-serif;
}

@media (min-width: 700px){

  h2{
    font-size: 2.5em;
  }
}

